--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "target": "es5",
         "sourceMap": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "resolveJsonModule": true,
+        "esModuleInterop": true  
     }
 }
