--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,11 @@
         "target": "es5",
         "sourceMap": true,
         "outDir": "dist",
+        "declaration": true,
         "resolveJsonModule": true,
-        "esModuleInterop": true  
-    }
+        "esModuleInterop": true,
+        "strict": true 
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "**/__tests__/*"]
 }
