--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "ES6",
+        "module": "ES6",
         "sourceMap": true,
         "outDir": "dist",
         "declaration": true,
         "resolveJsonModule": true,
+        "moduleResolution": "node",
         "esModuleInterop": true,
         "strict": true 
     },
