--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "import": "./dist/module.js",
     "require": "./dist/module.js"
   },
-  "files": ["dist/", "src/",
+  "files": [
+    "dist/",
+    "src/",
     "./package-lock.json",
     "./README.md"
   ],
@@ -16,10 +18,12 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
+    "build": "npm run build:es6",
+    "build:all": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc --module es2015 --target es5 --moduleResolution Node --outDir dist/esm",
     "build:cjs": "tsc --module commonjs --target es5 --moduleResolution Node --outDir dist/cjs",
-    "build:es6": "tsc",
+    "build:es6": "tsc --project ./tsconfig.esm.json",
+    "postbuild": "node ./build-scripts/post-build.js",
     "test": "ts-node node_modules/jasmine/bin/jasmine --config=spec/support/jasmine.json",
     "coverage": "nyc -r text -e .ts -x \"tests/*.test.ts\" npm run test"
   },
@@ -29,8 +33,6 @@
   },
   "keywords": [
     "string",
-    "range",
-    "range",
     "range",
     "parser"
   ],
@@ -42,6 +44,7 @@
   "homepage": "https://github.com/erizvi/String-Range#readme",
   "devDependencies": {
     "@types/jasmine": "^3.6.2",
+    "filehound": "^1.17.4",
     "jasmine": "^3.6.3",
     "nyc": "^15.1.0",
     "ts-node": "^9.0.0",
