--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,9 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "module": "ES6",
+        "target": "es5",
         "sourceMap": true,
         "outDir": "dist",
-        "declaration": true,
         "resolveJsonModule": true,
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "strict": true 
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "**/__tests__/*"]
+        "esModuleInterop": true  
+    }
 }
